--- a/src/cukrovinky.html
+++ b/src/cukrovinky.html
@@ -116,7 +116,7 @@
 
 <p>Udělej ze šesti bílků co možná tuhý sníh, zamíchej do něho tři čtvrtě libry tlučeného prosátého cukru, s půl citronu na struhadle ustrouhanou kůru, dej to do papírového trychtýře, vytlač vždy kousek na papír, dej do prostředka kousek buď malinové nebo meruňkové zavařeninky, pak hromádku doplň, posyp to skrze sejtko hodně cukrem, nebo také cukrovou krupicí, zbytečný cukr sesyp s papíru a nech je zvolna pěkně do žemlová upect, potom papír vespod navlaž mokrou houbou, sejmi je dolů, nech je vystydnout a ulož je do suchého místa. Nechají se dlouho udržet, a mohou se buď tak dát k vínu mezi suché cukrovinky, nebo se na ně naleje šodó a dají se místo nákypu; nebo se může udělat kopec ze smetanové pěny s vanilií, a těmito španělskými větry ouhledně posázet.</p>
 
-<a name="preclicky-z-pistacii"><h2>Preclíčky z<h2>Preclíčky z&nbsp;pistácií</h2>nbsp;pistácií</h2></a>
+<a name="preclicky-z-pistacii"><h2>Preclíčky z pistácií</h2></a>
 
 <p>Vezmi na vál 8 lotů pěkné mouky, 5 lotů nového másla, 3 loty drobně utlučeného cukru, 4 loty ostrouhaných pistácií, všecko rukama dobře rozdrob, pak dvěma žloutky zadělej; potom dělej malé preclíčky, pomaž je rozkloktaným bílkem, posyp hrubě tlučeným cukrem a nech je do zlatova upect.</p>
 
