--- a/src/kolace-buchty-rozlicne-jine-pecivo-a-pamlsky.html
+++ b/src/kolace-buchty-rozlicne-jine-pecivo-a-pamlsky.html
@@ -166,7 +166,7 @@
 
 <p>Dej na vál dvacet lotů mouky a vmíchej do ni zlehka půl libry čerstvého másla tak, aby se máslo od mouky dělilo, pak v tom udělej důlek, vraz do něho dva žloutky, dej k tomu dvě lžíce hustých kvasnic, nebo hustý kvásek z lotu lisovaných kvasnic, asi šest lžic smetany, osol to trochu a zadělej těsto nožem, načež ho rukama několikrát zlehka prohnět a nech ho odpočinout; potom ho tenče rozválej, vykroj z něho kružátkem na čtvrt lokte široký pruh, z tohoto pak zas přespříč krájej na prst široké proužky, klad je na nepomaštěný plech, potři je rozkloktaným, vejcem, posyp je trochu solí a chceš-li i kmínem, a nech je hned v dobře vyhřáté troubě pect; když vychladnou, urovnej je do hraničk<b>y </b>na talíř.</p>
 
-<a name="malinke-preclicky-k-caji"><h2>Malinké preclíčky k<h2>Malinké preclíčky k&nbsp;čaji</h2>nbsp;čaji</h2></a>
+<a name="malinke-preclicky-k-caji"><h2>Malinké preclíčky k čaji</h2></a>
 
 <p>V šesti lotech mouky rozemni šest lotů másla, přidej k tomu dva loty tlučeného cukru, dvě kávové lžičky hustých kvasnic, krapýtek soli, a zadělej to jedním ušlehaným bílkem v hodně tuhé těsto, načež vždy kousek na vále rozválej na stéblo tenký pramýnek a dělej malinké preclíčky, klad je hned na plech máslem trochu potřený, potři je také máslem, posyp cukrem a nech je trochu odpočinout, potom je v troubě upeč.</p>
 
