--- a/src/kompoty.html
+++ b/src/kompoty.html
@@ -8,7 +8,7 @@
 
 <p>Nech na rendlíku ve čtvrt žejdlíku vína zvařit šest lotů cukru, a když to počíná houstnou dej do toho žejdlík přebraných pěkných lesních jahod, zatřes jimi zlehka, aby se všechny potopily, nech jen var přes ně přejít a vyklop je na misku.</p>
 
-<a name="kompot-z-malin"><h2>Kompot z<h2>Kompot z&nbsp;malin</h2>nbsp;malin</h2></a>
+<a name="kompot-z-malin">Kompot z malin</h2></a>
 
 <p>Připravuje se jako kompot z jahod; také se může jeden díl malin a jeden díl jahod spolu smíchat, je to pikantnější.</p>
 
