--- a/src/polivky-masite.html
+++ b/src/polivky-masite.html
@@ -10,7 +10,7 @@
 
 <p>Ovař čtvrt libry přebrané a vařící vodou dobře vyprané rejže v dobré hovězí polívce, pak ji utři s kouskem čerstvého nového másla a se třemi žloutky, nalej na ni vařící hovězí polívku, dobře ji rozkverluj a vlej ji do mísy. Máš-li kuřecí pupíčky a jatýrka, tedy je na drobno skrájej a k tomu připoj.</p>
 
-<a name="rejzova-polivka-s-parmazanskym-syrem"><h2>Rejžová polívka s<h2>Rejžová polívka s&nbsp;parmazánským sýrem</h2>nbsp;parmazánským sýrem</h2></a>
+<a name="rejzova-polivka-s-parmazanskym-syrem"><h2>Rejžová polívka s parmazánským sýrem</h2></a>
 
 <p>Dej do hrnku půl libry přebrané a několikrát ve vařící vodě vyprané rejže, nalej na ni dobrou hovězí polívku a nech ji do měkká uvařit, dej však pozor, aby zůstala celá; potom rozstrouhej na misku parmazánský sýr a dej ho na stůl zároveň s polívkou.</p>
 
@@ -20,7 +20,7 @@
 
 <p>Tyto knedlíčky mohou se též do rozpáleného propouštěného másla klásti, do zlatová usmažit, a pak polívka na ně nalejt.</p>
 
-<a name="polivka-zluta-s-rosolem-pro-8-neb-12-osob"><h2>Polívka žlutá s<h2>Polívka žlutá s&nbsp;rosolem pro 8 neb 12 osob</h2>nbsp;rosolem pro 8 neb 12 osob</h2></a>
+<a name="polivka-zluta-s-rosolem-pro-8-neb-12-osob"><h2>Polívka žlutá s rosolem pro 8 neb 12 osob</h2></a>
 
 <p>Vraz do hrnku 12 čerstvých vajec, vlej k tomu žejdlík vlažné hovězí polívky, hodně to rozkloktej (rozkverluj) a dej k tomu trochu květu; pak obvaz dobře hrnek papírem a pověs ho do vařiči vody tak, aby tam žádná voda nemohla, a nech to hodinu vařit; potom vybírej malou lžičkou rosol po kouskách a vlož je do mísy. Vraz do hrnku šest žloutků, rozkloktej je s vlažnou polívkou, pak na to nalej vařící dobrou polívku, ještě ji hodně rozkloktej a potom ji vlej do mísy na tu ssedlinu.</p>
 
@@ -28,7 +28,7 @@
 
 <p>Rozkrájej na kousky libru telecího masa, krčky a všeliké kousky od drůbeže, dvě cibule, několik kořínků petružele, celeru a mrkve, dvě kapusty, a nech to s kusem nového másla dusit; musí se však dohlížet, aby to nezčervenalo; pak na to nalej hovězí polívku a nech to hodinu vařit, potom to proceď a trochou bílé jíšky připraž. Vezme se buď telecí nebo jehněčí mozeček, očistí se, obalí se dříve v mouce, pak se omočí v rozkloktaném vejci, obalí se ve strouhané žemličce, osmaží se v rozpáleném másle, a potom se naň vleje polívka. Není-li času ku smažení, může se mozeček dobře očištěný do té procezené polívky dát vařit, a tato se pak vleje na smaženou, drobnince rozkrájenou žemličku.</p>
 
-<a name="7.polivka-tlucena"><h2>7.Polívka tlučená</h2></a>
+<a name="polivka-tlucena"><h2>Polívka tlučená</h2></a>
 
 <p>Uvař starou slepici při hovězím mase do měkká, potom vyřízni prsíčka, ostatní slepici v moždíři dobře utluč, dej ji do hrnce, přidej k ni rozkrájenou mrkev, petružel, celer a kousek zázvoru, nalej na to polívku, v níž se slepice vařila, a nech to hodinu vařit. Zatím usekej drobně ta vyříznutá prsíčka, dej je do hrnku, přidej k tomu kousek nového másla, čtyry žloutky, rozkloktej to s půl žejdlíkem vlažné polivky, tu ostatní polívku proceď skrze husté sejtko, a když se vaří, zakloktej (zakverluj) ji s těmi žloutky a prsíčkama, a vlej ji hned do mísy, sice by se srazila.</p>
 
@@ -44,7 +44,7 @@
 
 <p>Vraz do hrnečku dvě celé vejce a dva žloutky, rozkloktej je, dej do toho trochu květu, trochu zelené petružele, trochu soli a jednu ustrouhanou žemličku, pak trochu dobré sladké smetany, a všecko pospolu dobře umíchej; potom vymaž rendlíček máslem, posyp strouhanou žemličkou, vlej do něho tu míchaninu a nech svítek upéct; když vychladne, rozkrájej ho na kousky, nalej na něj hovězí polívku a nech to trochu povařit, pak zapraž polívku trochou bílé jištičky a nes ji na tabuli.</p>
 
-<a name="polivka-s-kraplickami-pro-6-i-8-osob"><h2>Polívka s<h2>Polívka s&nbsp;krapličkami pro 6 i 8 osob</h2>nbsp;krapličkami pro 6 i 8 osob</h2></a>
+<a name="polivka-s-kraplickami-pro-6-i-8-osob"><h2>Polívka s krapličkami pro 6 i 8 osob</h2></a>
 
 <p>Vezmi kus studeného kapouna nebo telecí pečeně, usekej to na drobno, dej k tomu strouhané žemličky, drobně usekané zelené petružele, trochu květu, a nech to na másle chvilku dusit, potom k tomu dej asi lžičku nebo dvě hovězí polívky, tři žloutky, a nech to ještě chvilku na uhlí, pak to nech vychladnout. Těsto udělej tak jako na nudle, pak ho rozválej a rozkrájej pro malé krapličky, okolky pomaž bílkem, na každý lístek dej hromádku té sekaniny a pěkně to slož, okolky přimáčkni, a krapličky zavař do dobré polívky. Máš-li právě čerstvé hříbky, tedy jich usekej na drobninko a dej je na rendlíček na kus nového másla smažit, přidej k nim zelené petružele, trochu květu, trochu pepře, a pak je dej též do polívky povařit.</p>
 
@@ -126,7 +126,7 @@
 
 <p>Pro 6 osob oloupej 12 prostředních zemčat, rozkrájej je na lístky a nech je buď na rozkrájeném hovězím loji nebo na čerstvém másle s rozkrájenou cibulkou hezky do zlatová usmažit; potom na ně nalej 4 žejdlíky dobré hovězí polívky a nech je do měkká rozvařit, pak je rozmačkej, rozmíchej a proceď. Oloupej zase 12 malých, pěkných stejných kulatých zemčat, nakrájej z nich na stýblo tenké koláčky, a opět je buď na loji nebo na novém másle do zlatová vysmaž, pak je dej do polívkové mísy, polívku okořeň květem a vlej ji na zemčata. Edo tuto polívku trochu přihoustlejší míti chce, může zemčata před rozvařením ještě dvěma kávovýma lžícema pěkné mouky poprášit a ještě trochu smažit nechat, pak teprv polívku na ně nalejt a dále s rozmícháním, jak podotknuto, pokračovat.</p>
 
-<a name="polivka-s-knedlickami-z-hoveziho-tuku"><h2>Polívka s knedlíčkami z<h2>Polívka s knedlíčkami z&nbsp;hovězího tuku</h2>nbsp;hovězího tuku</h2></a>
+<a name="polivka-s-knedlickami-z-hoveziho-tuku"><h2>Polívka s knedlíčkami z hovězího tuku</h2></a>
 
 <p>Pro 8 osob se vezme 8 lotů tuku (morku) a rozdělí se na dva díly, jeden díl se nechá rozpustit a druhý díl se rozkrájí na malé kostky; v tom rozpuštěném usmaží se půl ostrouhané a na malé kostky rozkrájené žemličky, druhá polovička žemličky se též rozkrájí a namočí se ve sladké smetaně; onen na kostky rozkrájený tuk se též rozpustí, přecedí a vychladlý se utře, pak se do něho vrazí tři žloutky a jedno celé vejce, dá se k tomu ta ve smetaně namočená, vymačkaná žemlička, lžíce pěkné mouky a též ta do zlatová vy-smažená žemlička a trochu zelené drobně rozkrájené petružele; z toho se pak kávovou lžičkou zavaří do dobré hovězí polívky malé knedlíčky a polívka se okoření květem.</p>
 
