Odkazy mezi recepty

--- a/src/cukrovinky.html
+++ b/src/cukrovinky.html
@@ -252,4 +252,4 @@
 
 <a name="vselike-drobnustky-z-maselneho-testa"><h2>Všeliké drobnůstky z máselného těsta</h2></a>
 
-<p>Udělej máslové těsto dle čísla 3. (str. 168) a z toho udělej dle čísla 4. (str. 169) malé koláčky s otvorem nahoře, do něhož, když jsou koláčky upečené, dej jakoukoli zavařeninku a posyp je cukrem.</p>
+<p>Udělej <a href="pastyky.html#maslove-testo-k-pastykam">máslové těsto</a> a z toho udělej <a href="pastyky.html#maslove-pasticky-s-koroptvemi">malé koláčky</a> s otvorem nahoře, do něhož, když jsou koláčky upečené, dej jakoukoli zavařeninku a posyp je cukrem.</p>
