--- a/src/ledy-rozlicnych-barev.html
+++ b/src/ledy-rozlicnych-barev.html
@@ -1,6 +1,6 @@
 <a href="index.html" class="hlavicka"><h1>Ledy rozličných barev</h1></a>
 
-<a name="k-ozdobeni-dortu-a-cukrovinek"><h2>k ozdobení dortů a cukrovinek</h2></a>
+<p>K ozdobení dortů a cukrovinek.</p>
 
 <a name="bily-led"><h2>Bílý led</h2></a>
 
