--- a/src/uvod.html
+++ b/src/uvod.html
@@ -22,7 +22,7 @@
 
 <p>Je-li masa větší zásoba, musí se k tomu hledět, aby nezapáchlo; stane-li se to však přece, tedy se takové maso nikdy nesmí vařit. Nejlépe se ho ještě použije, když se na rendlíku s kusem másla, s cibulí, kořením a octem udusí a jíškou zapraží.</p>
 
-<p>Také jest dobře v každé větší domácnosti míti v zásobě kyselý rosol čís. 27, str. 56. Když se chce spěšně kyselá omáčka připravit, naleje se na jistou část onoho rosolu trochu hovězí polívky, přidá se octa nebo vína, zapraží se to buď jíškou, nebo se to zakloktá žloutkama, přidá se trochu strouhané žemličky, aby to zhoustlo, a omáčka jest hotova.</p>
+<p>Také jest dobře v každé větší domácnosti míti v zásobě <a href="omacky-k-hovezimu-masu.html#kysely-rosol-aspik">kyselý rosol</a>. Když se chce spěšně kyselá omáčka připravit, naleje se na jistou část onoho rosolu trochu hovězí polívky, přidá se octa nebo vína, zapraží se to buď jíškou, nebo se to zakloktá žloutkama, přidá se trochu strouhané žemličky, aby to zhoustlo, a omáčka jest hotova.</p>
 
 <p>Všecka domácí <b><i>drůbež,</i></b> aby se stala křehčí, má v létě aspoň přes noc zabita ležet, v zimě déle; zvláště kapouni, husy, topani vydržejí ve studeném místě, kde však příliš nemrzne, 6 i 8 <b><i>dní,</i></b> aniž by škodu utrpěli. Nejlepší jest drůbež škubaná; paří-lise však, musí se dáti pozor, aby se nepřepařil. Proto je dobře, když se kuřata, kapouni a t. d., hned jak se zabijou, strčí do studené vody; tím zbělí a zkřehnou, a tak snadno se nepřepaří. Když jsou dobře očištěni, vykuchají, omejou a připraví se na pekáč, totiž: křidélka se naloží nazad, nožky se do polou uřežou a špagátem ouhledně stáhnou anebo dřevěnými špejlky zašpejlí; nesmí se však na špejlky vzíti dříví borové nebo smolné, aby to nedostalo nepříjemnou chuť. Holubům se hlava uřeže nebo zrovna utrhne; někdo je i zadušuje, aby z nich krev ne vytekla; pak se oškubou a vykuchají.</p>
 
@@ -32,13 +32,12 @@
 
 <p>Ani maso ani zvěřina nesmí se ukládati v takových místech, kde je ztuchlinu cítit, sice to načichne a jest nechutné.</p>
 
-<p>Vepřové maso jak se k <b><i>uzení</i></b> nakládá, jest na str. 507 čís. 2. uvedeno. –</p>
+<p>Vepřové maso jak se k <a href="dodatek.html#jak-se-maso-k-uzeni-naklada">uzení nakládá</a></p>
 
 <p><b><i>Zelenina</i></b> zachová se přes zimu nejlépe v suchém sklepě, a sice: zelí, kapusta a karfiol vytaná se ze země i s kořenem, pak se kořenem zastrká do vlhkého písku; taktéž křen, petružel, celer, mrkev, kolník atd., všecko s natí, zahrabe se do vlhkého písku až po nať, a písek se časem pokropí, aby to zůstalo pořád čerstvé a neporušené.</p>
 
 <p><i>Ovoce </i>ukládá se v suchých sklepích na prkna slamou postlaná.</p>
 
-<p><b><i>Mouka, kroupy, jáhly, krupice, hrách, čočka</i></b> atd uchová se nejlépe v truhlách s příhradami, tak zvaných špižírnách; ve víku těchto vyřežou se kulaté díry a tyto se pobijou dirkovaným plechem. Špižírny však musejí vždy státi v takovém místě, kde vane čerstvý vzduch. Čerstvě mletá mouka musí se ale v otevřené špižírně několik dní nechat vyvětrat, a pak se ní musí častěji hodně od spodu zamíchat aby neztuchla. -</p>
+<p><b><i>Mouka, kroupy, jáhly, krupice, hrách, čočka</i></b> atd uchová se nejlépe v truhlách s příhradami, tak zvaných špižírnách; ve víku těchto vyřežou se kulaté díry a tyto se pobijou dirkovaným plechem. Špižírny však musejí vždy státi v takovém místě, kde vane čerstvý vzduch. Čerstvě mletá mouka musí se ale v otevřené špižírně několik dní nechat vyvětrat, a pak se ní musí častěji hodně od spodu zamíchat aby neztuchla.</p>
 
 <p>Žádné z těchto poučení nesmí se pokládati za zbytečné, neboť nedopatřením a neopatrností hospodárně: mnohá věc porušení béře aneb docela se zkazí a při větších zásobách ovšem i velmi značná škoda se způsobuje.</p>
-
