--- a/src/rozlicne-ryby.html
+++ b/src/rozlicne-ryby.html
@@ -52,17 +52,17 @@
 
 <p>Oškrab a trhni štiku, přemej a osol ji, polož ji pěkně do věnečka svinutou do vařící vody a nech ji vařit, až je dost; pak vodu sceď, štiku vyklop na mísu, posyp ji žemličkovou kůrkou a sekanou zelenou petruželí, omasti ji smaženou cibulkou a dej k ní na stůl do nádobky smetanový křen nebo hořčici. Může se dát hned po polívce.</p>
 
-<a name="stika-a-citronovou-omackou"><h2>Štika a citronovou omáčkou</h2></a>
+<a name="stika-s-citronovou-omackou"><h2>Štika s citronovou omáčkou</h2></a>
 
 <p>Oškrab a trhni štiku, rozkrájej ji na špalíčky a uvař ji ve slané vodě; pak ji narovnej na rendlík, dej pod ní kousek nového másla, udělej bledou jištičku, nalej do ní té polívky, v které se štika vařila, proceď to skrze sejtko na štiku, dej k tomu na nudličky rozkrájenou citronovou kůru a trochu květu, a zaceď to citronovou šťávou.</p>
 
-<a name="stika-a-kyselou-smetanou"><h2>Štika a kyselou smetanou</h2></a>
+<a name="stika-s-kyselou-smetanou"><h2>Štika s kyselou smetanou</h2></a>
 
-<p>Uvař štiku na modro dle čísla 4<b>., </b>dej do hrnečku lžíci pěkné mouky, kousek másla a půl žejdlíka husté kyselé smetany, dobře to rozmíchej, přidej k tomu trochu květu, trochu zázvoru a asi půl žejdlíka polívky, v níž se štika vařila, dobře to rozmíchej a nech povařit, pak to proceď na štiku, dej k tomu asi ze třech sardelí sardelového másla a trochu kaprlí, pěkně to na mísu urovnej a dej to na tabuli.</p>
+<p>Uvař <a href="#kapr-na-modro">štiku na modro</a>, </b>dej do hrnečku lžíci pěkné mouky, kousek másla a půl žejdlíka husté kyselé smetany, dobře to rozmíchej, přidej k tomu trochu květu, trochu zázvoru a asi půl žejdlíka polívky, v níž se štika vařila, dobře to rozmíchej a nech povařit, pak to proceď na štiku, dej k tomu asi ze třech sardelí sardelového másla a trochu kaprlí, pěkně to na mísu urovnej a dej to na tabuli.</p>
 
 <a name="pecena-stika-s-omackou"><h2>Pečená štika s omáčkou</h2></a>
 
-<p>Trhni a oškrab štiku, omej ji v několika vodách, osol ji, sviň ji do kolečka a vlož ji do pekáče na špejle, aby byla jako v povětří, přilej k ní trochu vína a nech ji pect, přičemž ji stále povrchu potírej v másle omáčeným pírkem; když se již dopeká, rozetři s máslem 6 pěkných sardelí, přidej k nim čtyry na tvrdo uvařené žloutky, půl ostrouhané, v mléce namočené žemličky, trochu nakrájené citronové kůry, trochu usekané majoránky a dva syrové žloutky, dobře to rozmíchej a nalej na to petruželové vody tolik, co je třeba, aby z toho byla hustá omáčka, pak to vlej ku štice a nech to trochu povařit; potom vyndej štiku na mísu a omáčku na ni proceď</p>
+<p>Trhni a oškrab štiku, omej ji v několika vodách, osol ji, sviň ji do kolečka a vlož ji do pekáče na špejle, aby byla jako v povětří, přilej k ní trochu vína a nech ji pect, přičemž ji stále povrchu potírej v másle omáčeným pírkem; když se již dopeká, rozetři s máslem 6 pěkných sardelí, přidej k nim čtyry na tvrdo uvařené žloutky, půl ostrouhané, v mléce namočené žemličky, trochu nakrájené citronové kůry, trochu usekané majoránky a dva syrové žloutky, dobře to rozmíchej a nalej na to petruželové vody tolik, co je třeba, aby z toho byla hustá omáčka, pak to vlej ku štice a nech to trochu povařit; potom vyndej štiku na mísu a omáčku na ni proceď.</p>
 
 <a name="stika-sardelemi-prostrkana"><h2>Štika sardelemi prostrkaná</h2></a>
 
@@ -136,7 +136,7 @@
 
 <a name="losos-s-majonezovou-omackou"><h2>Losos s majonézovou omáčkou</h2></a>
 
-<p>Uvař lososa ve slané studničné vodě, do které jsi byla přidala půl žejdlíka vína a jednu cibuli; potom lososa vyndej na mísu, okrášli ho kolem citronovým listím nebo alespoň zelenou petruželí, a na stůl dej k němu ve zvláštní nádobce majonézovou omáčku číslo 22 (str. 54)</p>
+<p>Uvař lososa ve slané studničné vodě, do které jsi byla přidala půl žejdlíka vína a jednu cibuli; potom lososa vyndej na mísu, okrášli ho kolem citronovým listím nebo alespoň zelenou petruželí, a na stůl dej k němu ve zvláštní nádobce <a href="prichoutky-cili-asietky.html#teleci-mozek-s-majonezovou-omackou">majonézovou omáčku</a>.</p>
 
 <a name="peceny-ouhor"><h2>Pečený ouhoř</h2></a>
 
@@ -162,7 +162,7 @@
 
 <a name="ouhor-s-majonezovon-omackou"><h2>Ouhoř s majonézovon omáčkou</h2></a>
 
-<p>Pěkného, dobře očištěného ouhoře rozkrájej na stejné špalíčky, nasol je, posyp je pepřem, zaceď je citronovou šťávou a nech je tak hodinu ležet; mezitím si udělej majonézovou omáčku číslo 22 (str. 54). Potom urovnej ouhoře kousek vedle kousku do rendlíku na kus čerstvého másla, a nech ho spěšně po obou stranách upect, načež jej odstav a nech ho vystydnout; pak napíchni každý kousek na vidličku a omoč ho v majonézové omáčce, klaď je do kola na mísu a okrášli je kolem naloženými ryzcemi, malinkými okurkami a kaprlemi; ostatní omáčku vlej do prostřed mísy, a nežli to dáš na stůl, postav to ještě do studeného místa.</p>
+<p>Pěkného, dobře očištěného ouhoře rozkrájej na stejné špalíčky, nasol je, posyp je pepřem, zaceď je citronovou šťávou a nech je tak hodinu ležet; mezitím si udělej <a href="prichoutky-cili-asietky.html#teleci-mozek-s-majonezovou-omackou">majonézovou omáčku</a>. Potom urovnej ouhoře kousek vedle kousku do rendlíku na kus čerstvého másla, a nech ho spěšně po obou stranách upect, načež jej odstav a nech ho vystydnout; pak napíchni každý kousek na vidličku a omoč ho v majonézové omáčce, klaď je do kola na mísu a okrášli je kolem naloženými ryzcemi, malinkými okurkami a kaprlemi; ostatní omáčku vlej do prostřed mísy, a nežli to dáš na stůl, postav to ještě do studeného místa.</p>
 
 <a name="peceni-mnici"><h2>Pečení mníci</h2></a>
 
@@ -170,7 +170,7 @@
 
 <a name="smazeni-mnici"><h2>Smažení mníci</h2></a>
 
-<p>Tito se upravějí tak jako ouhoř číslo 38</p>
+<p>Tito se upravějí tak jako <a href="#peceny-ouhor">ouhoř</a>.</p>
 
 <a name="mnici-na-modro"><h2>Mníci na modro</h2></a>
 
@@ -192,9 +192,9 @@
 
 <p>Chceš-li tuto vzácnou rybu hodně zužitkovat, tedy jí můžeš polovici upravit na některý z předešlých způsobů a polovici usmaž tak jako kapra číslo 7</p>
 
-<a name="lupice-a-majonezovou-omackou"><h2>Lupice a majonézovou omáčkou</h2></a>
+<a name="lupice-s-majonezovou-omackou"><h2>Lupice s majonézovou omáčkou</h2></a>
 
-<p>Dobře očištěnou a na kusy nakrájenou lupiči uvař v jednom dílu vody a v jednom dílu vína, k čemuž jsi byla připojila sůl, bobkový list, pepř a cibuli; potom lupici vyndej, omoč každý kus ve připravené majonézové omáčce čís. 22 (str. 54) a okrášli ji na tentýž způsob jako ouhoře číslo 40</p>
+<p>Dobře očištěnou a na kusy nakrájenou lupiči uvař v jednom dílu vody a v jednom dílu vína, k čemuž jsi byla připojila sůl, bobkový list, pepř a cibuli; potom lupici vyndej, omoč každý kus ve připravené <a href="prichoutky-cili-asietky.html#teleci-mozek-s-majonezovou-omackou">majonézové omáčce</a> a okrášli ji na tentýž způsob jako <a href="#peceny-ouhor">ouhoře</a>.</p>
 
 <a name="okouni-na-lehky-zpusob"><h2>Okouni na lehký způsob</h2></a>
 
@@ -206,13 +206,13 @@
 
 <a name="okonni-na-modro"><h2>Okonni na modro</h2></a>
 
-<p>Upravějí se na tentýž způsob jako kapr číslo 4</p>
+<p>Upravějí se na tentýž způsob jako <a href="#kapr-na-modro">kapr</a>.</p>
 
 <a name="okonni-s-omackou"><h2>Okonni s omáčkou</h2></a>
 
 <p>Nalej na rendlík jeden díl studničné vody a jeden díl octa, přidej k tomu jednu cibuli, dva bobkové listy, kousek dymiánu, trochu celého pepře, nového koření, kousek zázvoru, dva hřebíčky, osol to a nech to čtvrt hodiny vařit; pak do toho vlož oškrabané a dobře očištěné okouny, a nech je chvíli vařit, potom je vyndej, polívku proceď a postav ji opět k ohni. Umíchej v hrnečku kousek čerstvého másla se dvěmi očištěnými, v moždíři utlučenými sardelemi, přidej k tomu půl ostrouhané, ve víně namočené žemličky, trochu citronové kůry a krapýtek mouky, rozmíchej a zakloktej to polívkou, v níž okouni se vařili, a nech to trochu spejchnout; nyní urovnej okouny na mísu, polej je omáčkou a mísu oblož citronovými koláčky.</p>
 
-<p>Že se okouni také smažiti mohou, jest již podotknuto při smaženém, kapru číslo 7</p>
+<p>Že se okouni také smažiti mohou, jest již podotknuto při <a href="#kapr-smazeny">smaženém kapru</a>.</p>
 
 <a name="pstruhove-ve-vine-vareni"><h2>Pstruhové ve víně vaření</h2></a>
 
@@ -226,13 +226,13 @@
 
 <p>Připrav si postní aspik číslo 26. Pstruhy zab, oškrab, vykuchej, omej a rozkrájej je na kousky. Mezitím nech na rendlíku vodu s octem, solí a pepřem zvařit, pak vlož pstruhy do toho a nech je jen asi deset minut vařit, načež je vyndej a nech je vystydnout. Potom nalej do formy trochu svrchu zmíněného aspiku a nech ho ztuhnout, pak pstruhy urovnej do prostřed tak, aby mezi formou a pstruhami zůstala na prst široká mezera, a máš-li račí ocásky nebo karfiol, tedy vzhled jídla tohoto velmi zvýšíš, když pstruhy uvařenými, oloupanými račími ocásky a rozebraným karfiolem proložíš, načež formu studeným tekutým aspikem doplň a nech to u ledu nebo ve chladném místě ztuhnout. Když to chceš dáti na stůl, omoč formu v horké vodě, otři ji, vyklop rosol na mísil a oblož jej na čtvrtky rozkrájeným citronem.</p>
 
-<p>Smažení pstruhové připravějí se jako smažený kapr číslo 7</p>
+<p>Smažení pstruhové připravějí se jako <a href="#kapr-smazeny">smažený kapr</a>.</p>
 
 <a name="ovesnicky-s-omackou"><h2>Ovesníčky s omáčkou</h2></a>
 
 <p>Nalej na rendlík nebo na pánev jeden díl vinního octa, jeden díl vody a jeden díl rakouského vína, přidej k tomu několik stroužků česneku, jednu na koláčky rozkrájenou cibuli, celý pepř, zázvor, hřebíček, a nech to vařit; pak dej na čistý kastrol dobře přemyté ovesníčky, proceď na ně ten vařený ocet, trochu to osol a nech to malou čtvrt hodiny vařit; dej do hrnečku 3 žloutky, kávovou lžičku pěkné mouky, trochu květu, 3 s lotem čerstvého másla rozetřené sardele, rozmíchej to s několika lžícemi rakouského vína, nalej do toho té polívky, v které rybičky se vaří, rozkloktej to dobře nalej to na ovesníčky, přidej k tomu trochu drobně rozkrájené kůry a nech to malounko povařit; pak to zaceď citronovou šťávou a dej to na tabuli. Také se mohou ovesníčky nechat vystydnout jen v té polívce, v které se vařily, dá se k nim ocet a olej – tak jsou na modro.</p>
 
-<p>Ovesníčky a mřeně mohou se také smažit jako žáby.</p>
+<p>Ovesníčky a mřeně mohou se také <a href="raci-zaby-sneci-a-musle.html#smazene-zaby">smažit jako žáby</a>.</p>
 
 <a name="piskori-se-sardelemi"><h2>Piskoři se sardelemi</h2></a>
 
@@ -256,7 +256,7 @@
 
 <a name="sumec-peceny"><h2>Sumec pečený</h2></a>
 
-<p>Z pěkného kusu sumce od oháňky nakrájej napříč tlusté řízky, osol a posyp je po obou stranách šalvějovou míšeninkou (číslo 3 mezi míšeninkami), pak dej na kastrol kousek másla a peč řízky po obou stranách, jsou dost měkké a tučnost z nich hezky se vypeče, potom je urovnej na mísu a oblož je na čtvrtky nakrájeným citronem.</p>
+<p>Z pěkného kusu sumce od oháňky nakrájej napříč tlusté řízky, osol a posyp je po obou stranách <a href="rozlicne-miseninky.html#miseninka-ze-salveje">šalvějovou míšeninkou</a>, pak dej na kastrol kousek másla a peč řízky po obou stranách, jsou dost měkké a tučnost z nich hezky se vypeče, potom je urovnej na mísu a oblož je na čtvrtky nakrájeným citronem.</p>
 
 <a name="sumec-marinovany"><h2>Sumec marinovaný</h2></a>
 
@@ -264,7 +264,7 @@
 
 <a name="slanecky-pecene"><h2>Slanečky pečené</h2></a>
 
-<p>Stáhni několik slanečků, vlož je do mléka a nech <b>vje </b>vněm 6 až 8 hodin ležet, pak je vyndej, osuš, vlož je na podlouhlý, máslem pomazaný papír, zaobal je, papír všude okolo přehni, aby pára nemohla nikudy odcházet, vlož je na pánev na kus másla a nech je v troubě čtvrt hodiny pect; potom papír odstraň, slanečky urovnej na misku a polej je vlastní šťávou.</p>
+<p>Stáhni několik slanečků, vlož je do mléka a nech je vněm 6 až 8 hodin ležet, pak je vyndej, osuš, vlož je na podlouhlý, máslem pomazaný papír, zaobal je, papír všude okolo přehni, aby pára nemohla nikudy odcházet, vlož je na pánev na kus másla a nech je v troubě čtvrt hodiny pect; potom papír odstraň, slanečky urovnej na misku a polej je vlastní šťávou.</p>
 
 <a name="slanecky-nalozene"><h2>Slanečky naložené</h2></a>
 
