--- a/src/rybi-a-postni-polivky.html
+++ b/src/rybi-a-postni-polivky.html
@@ -30,15 +30,15 @@
 
 <a name="prvni-miseninka"><h2>První míšeninka</h2></a>
 
-<p>Jsou-li mladé hříbky, nech je se zelenou petruželkou jak obyčejně dusit a okořeň je pepřem; pak je dej do prostřed hlubokého talíře, navrch narovnej buď stříkánky nebo smažený hrášek, anebo je aspoň posyp smaženými žemličkovými kostkami, okolo udělej věnec ze sazených, formičkou vypíchaných vajec, a postříkej to buď račím máslem, nebo to posyp zelenou petruželí. K tomu dej dušenou polívku čís. 7</p>
+<p>Jsou-li mladé hříbky, nech je se zelenou petruželkou jak obyčejně dusit a okořeň je pepřem; pak je dej do prostřed hlubokého talíře, navrch narovnej buď stříkánky nebo smažený hrášek, anebo je aspoň posyp smaženými žemličkovými kostkami, okolo udělej věnec ze sazených, formičkou vypíchaných vajec, a postříkej to buď račím máslem, nebo to posyp zelenou petruželí. K tomu dej <a href="polivky-masite.html#dusena-polivka">dušenou polívku</a>.</p>
 
 <a name="druha-miseninka"><h2>Druhá míšeninka</h2></a>
 
-<p>Nech karfiol nebo špargl na másle a trochu rybí polívky do měkka udusit; mnoho-li se má dát polívky, nedá se stanovit; pak nech ve slané vodě uvařit půl kopy raků, a kus kapra, z kterého se prvé všecky kůstky vyberou, rozkrájej na kostky, osol ho a nech ho též se zelenou petruželkou na másle dusit. Když jest vše hotovo, dej vespod na talíř dušenou rybu, na tuto karfiol nebo špargl, navrch hezky do věnečka račí ocásky, a okolo talíře urovnej kousky smaženého línu, kapra, štiky, nebo jakou rybu právě máš, nebo smažené kaprové mléči. K tomu dej též dušenou polívku čís. 7</p>
+<p>Nech karfiol nebo špargl na másle a trochu rybí polívky do měkka udusit; mnoho-li se má dát polívky, nedá se stanovit; pak nech ve slané vodě uvařit půl kopy raků, a kus kapra, z kterého se prvé všecky kůstky vyberou, rozkrájej na kostky, osol ho a nech ho též se zelenou petruželkou na másle dusit. Když jest vše hotovo, dej vespod na talíř dušenou rybu, na tuto karfiol nebo špargl, navrch hezky do věnečka račí ocásky, a okolo talíře urovnej kousky smaženého línu, kapra, štiky, nebo jakou rybu právě máš, nebo smažené kaprové mléči. K tomu dej též <a href="polivky-masite.html#dusena-polivka">dušenou polívku</a>.</p>
 
 <a name="treti-miseninka"><h2>Třetí míšeninka</h2></a>
 
-<p>Uvař vnitřnosti z jednoho jikrnatého a z jednoho mléčního kapra, jen že se mléči oddělí a k smaženi připraví. Když jest vše vařeno, rozebere se to, černé se rozkrájí a dá vespod, jikry se urovnají do věnečka, pak se to poklade smaženým mléčím, a okolo talíře se udělá věnec ze smažené, na kostky rozkrájené žemličky, která opět poklade celerovými koláčky. I k této míšenince dá se dušená polívka čís. 7, anebo polívka z čerstvých hříbků čís. 27</p>
+<p>Uvař vnitřnosti z jednoho jikrnatého a z jednoho mléčního kapra, jen že se mléči oddělí a k smaženi připraví. Když jest vše vařeno, rozebere se to, černé se rozkrájí a dá vespod, jikry se urovnají do věnečka, pak se to poklade smaženým mléčím, a okolo talíře se udělá věnec ze smažené, na kostky rozkrájené žemličky, která opět poklade celerovými koláčky. I k této míšenince dá se <a href="polivky-masite.html#dusena-polivka">dušená polívka</a>, anebo <a href="#polivka-z-cerstvych-hribku">polívka z čerstvých hříbků</a>.</p>
 
 <p>Dle těchto třech míšeninek může jich zkušená kuchařka s rozličnými změnami udělat třebas dvacet.</p>
 
