Oprava textu v uvod.html

--- a/src/uvod.html
+++ b/src/uvod.html
@@ -4,7 +4,7 @@
 
 <p>Čistota, pořádek a dobré vyhovění každé i maličké věci v kuchyni jest základ celého umění kuchařského; pročež přáli jest, aby si nastávající kuchařky následujícího poučení bedlivě všimly.</p>
 
-<p>Předně musí se k tomu hledět, aby <b><i>všecko kuchyňské nádobí,</i></b> v němžto jídla se vaří, bylo úplně čisté, v Sečky hrnky a rendlíky nechať se chovají čistě umyty a poklopeny v přiměřených příhradách, a když některého upotřebeno býti má, musí se ještě čistým šatem náležitě vytříti.</p>
+<p>Předně musí se k tomu hledět, aby <b><i>všecko kuchyňské nádobí,</i></b> v němžto jídla se vaří, bylo úplně čisté, všecky hrnky a rendlíky nechať se chovají čistě umyty a poklopeny v přiměřených příhradách, a když některého upotřebeno býti má, musí se ještě čistým šatem náležitě vytříti.</p>
 
 <p>Železné nádobí, jehož se v novějším čase zhusta užívá, nemá se, když je prázdné, nechávati stát na horkém místě, protože v takovémto případu vnitřní bílý nátěr snadno odpryskuje; stane-li se to však přece, tedy se nesmí v takovéto odprýskané nádobě nic kyselého vařit, protože by tím způsobená plíseň mohla býti zdraví škodlivá.</p>
 
